generated/apps/labmap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labmap-backend
  namespace: labmap
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    ocf.berkeley.edu/flux: labmap-backend
---
apiVersion: v1
kind: Service
metadata:
  name: labmap-frontend
  namespace: labmap
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    ocf.berkeley.edu/flux: labmap-frontend
